--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -5,10 +5,12 @@ $color-app-container: #ffffff;
 $color-title: #ffffff;
 $color-background-title: #17203a;
 $color-slot: #ffffff;
+$color-line: #ffffff;
 
 $font-title: 2em;
-$font-text: 1.2em;
+$font-text: 0.9em;
 
 $round:0.2em;
 
 $gutter: 1rem;
+
