--- a/src/components/RingList/RingList.scss
+++ b/src/components/RingList/RingList.scss
@@ -9,7 +9,7 @@
 }
 .cross-ring{
     font-size: v.$font-title;
-    background-color: red;
+    background-color: v.$color-cross;
     color: white;
     position: absolute;
     padding: 0 4px;
