--- a/src/components/Stuff/Stuff.scss
+++ b/src/components/Stuff/Stuff.scss
@@ -20,7 +20,7 @@
 }
 .delete-item{
     font-size: v.$font-text;
-    background-color: red;
+    background-color: v.$color-cross;
     color: white;
     position: absolute;
     padding: 0 4px;
