--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -6,6 +6,8 @@ $color-title: #ffffff;
 $color-background-title: #17203a;
 $color-slot: #ffffff;
 $color-line: #ffffff;
+$color-cross: red;
+$color-error: red;
 
 $font-title: 2em;
 $font-text: 0.9em;
