updates renames and css

--- a/src/components/ItemArea/ItemArea.scss
+++ b/src/components/ItemArea/ItemArea.scss
@@ -1,6 +1,6 @@
 @use "src/styles/vars" as v;
 
-.cross-ring {
+.cross-close {
   border: 0;
   font-size: v.$font-title;
   background-color: v.$color-cross;
