add others items and refacto

--- a/src/components/SingleItem/SingleItem.scss
+++ b/src/components/SingleItem/SingleItem.scss
@@ -1,6 +1,6 @@
 @use 'src/styles/vars' as v;
 
-.ring-slot{
+.ring-slot, .companion-slot, .cuff-slot{
     width: 50%;
     display: flex;
     align-items: flex-start;
