--- a/src/components/ItemList/ItemList.scss
+++ b/src/components/ItemList/ItemList.scss
@@ -1,6 +1,6 @@
 @use 'src/styles/vars' as v;
 
-.ring-list{
+.ring-list, .cuff-list, .companion-list{
     width: 65%;
     margin: v.$gutter;
     display: flex;
