--- a/src/components/ItemList/ItemList.scss
+++ b/src/components/ItemList/ItemList.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-wrap: wrap;
     overflow: overlay;
+    align-items: flex-start;
 }
 .cross-ring{
     font-size: v.$font-title;
