--- a/src/components/ElementArea/ElementArea.scss
+++ b/src/components/ElementArea/ElementArea.scss
@@ -1,6 +1,6 @@
 @use "src/styles/vars" as v;
 
-.cross-close {
+.cross-close{
   border: 0;
   font-size: v.$font-title;
   background-color: v.$color-cross;
@@ -8,13 +8,19 @@
   position: absolute;
   padding: 0 4px;
   z-index: 1;
-  right: calc(5vw - 1rem);
-  margin-top: -30px;
   &:after {
     display: inline-block;
     content: "\00d7"; /* This will render the 'X' */
   }
   &:hover {
     cursor: pointer;
+  }
+  &-items{
+    right: calc(5vw - 1rem);
+    margin-top: -30px;
+  }
+  &-spell{
+    right: calc(5vw + 300px);
+    margin-top: -30px;
   }
 }
