add-spells-in-the-slot

--- a/src/components/ElementList/ElementList.scss
+++ b/src/components/ElementList/ElementList.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-wrap: wrap;
     overflow: overlay;
-    align-items: flex-start;
+    align-content: flex-start;
 }
 
 .cross-ring{
