--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -10,12 +10,13 @@ $color-cross: red;
 $color-error: red;
 $color-tabs: rgb(221, 221, 221);
 $color-tabs-active: #17203a;
+$color-input:#cecece;
 
 $font-title: 2em;
 $font-text: 0.9em;
 $font-title-item: 1.3em;
 
-$round:0.2em;
+$round:0.3em;
 
 $gutter: 1rem;
 
