--- a/src/components/BuildList/BuildList.scss
+++ b/src/components/BuildList/BuildList.scss
@@ -16,5 +16,6 @@
         justify-content: space-between;
         align-items: center;
         padding-left: 170px;
+        border-radius: v.$round;
     }
   }
