--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -22,6 +22,9 @@
     padding: v.$gutter;
     display: flex;
     justify-content: space-between;
+    &.active{
+      align-items: center;
+    }
   }
 
   &-error{
