--- a/src/components/SingleItem/SingleItem.scss
+++ b/src/components/SingleItem/SingleItem.scss
@@ -35,6 +35,7 @@
                 padding: 3px;
                 border-radius: v.$round;
                 color: v.$color-slot;
+                margin: 0 v.$gutter;
             }
         }
         &-container-carac{
