--- a/src/components/Info/Info.scss
+++ b/src/components/Info/Info.scss
@@ -4,25 +4,81 @@
     margin:v.$gutter;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-.title-level-container, .class-hero-container{
-    display: flex;
     justify-content: space-between;
-    & input{
+    align-items: center;
+    height:320px;
+    &-container{
+        width: 335px;
+    }
+    & input, label select{
         color: v.$color-background-title;
-        font-size: 20px;
+        font-size: v.$font-input;
         background-color: v.$color-background;
         border: 0;
         border-bottom: 1px solid v.$color-input;
-        margin: v.$gutter;
-        &:first-child{
-            width: 100%;
-            height: 30px;
-        }
+        height: 30px;
         &::placeholder{
             color: v.$color-input;
+        }
+    }
+    & label select{
+        cursor: pointer;
+        outline:0px;
+    }
+    .title-container, .others-infos-container{
+        width: 100%;
+        margin-bottom: v.$gutter;
+    }
+    .title{
+        width: 100%;
+        font-size: v.$font-title-build;
+        &:focus{
+            border-bottom: 1px solid v.$color-background-title; 
+        }
+    }
+    .level-container::before{
+        content:'Lvl.';
+        border-bottom: 1px solid v.$color-input;
+        line-height: 29px;
+        display: inline-block;
+        font-size: v.$font-input;
+    }
+}
+.others-infos-container{
+    display: flex;
+    justify-content: space-between;
+}
+.action-buttons{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    & button{
+        height: 40px;
+        border-radius: v.$round;
+        font-size: v.$font-input;
+        padding: 0 v.$gutter;
+        &.build-new{
+            border: 1px solid v.$color-input;
+            background-color: v.$color-background;
+            color: v.$color-background-title;
+            &:hover{
+                background-color: #eeeeee;
+            }
+            &:active{
+                border: 1px solid v.$color-background-title;
+            }
+        }
+        &.build-save{
+            border: 1px solid v.$color-background-title;
+            background-color: v.$color-background-title;
+            color: v.$color-background;
+            &:hover{
+                background-color: #1d284b;
+            }
+            &:active{
+                outline: 1px solid v.$color-background-title;
+                border: 1px solid #ffffff;
+            }
         }
     }
 }
