--- a/src/components/SingleBuild/SingleBuild.scss
+++ b/src/components/SingleBuild/SingleBuild.scss
@@ -1,3 +1,5 @@
+@use 'src/styles/vars' as v;
+
 .build-stuff{
     display: flex;
 }
@@ -14,6 +16,7 @@
 .cross-close-build{
     border: 0;
     background-color: red;
+    border-radius: v.$round;
     color: white;
     position: absolute;
     padding: 0 4px;
