--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -14,9 +14,11 @@ $color-input:#cecece;
 
 $font-title: 2em;
 $font-text: 0.9em;
+$font-input:1em;
 $font-title-item: 1.3em;
+$font-title-build: 1.4em;
 
-$round:0.3em;
+$round:0.2em;
 
 $gutter: 1rem;
 
