--- a/src/components/SingleItem/SingleItem.scss
+++ b/src/components/SingleItem/SingleItem.scss
@@ -1,5 +1,17 @@
 @use 'src/styles/vars' as v;
 
+@mixin menu-line {
+    content: '';
+    display: block;
+    margin-top: 5px;
+    height: 2px;
+    background-color: v.$color-tabs-active;
+    transition-property: left, right, width;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-out;
+    position: absolute;
+}
+
 .item{
     width: 50%;
     display: flex;
@@ -42,12 +54,46 @@
             position: relative;
             &-tabs{
                 display: flex;
-                & .tab{
+                & .tab, .active-tab{
                     padding: 5px;
-                   border-bottom: 1px solid v.$color-tabs;
+                    position: relative;
+                    border-bottom: 1px solid v.$color-tabs;
                 }
-                & .active-tab{
-                    border-bottom: 2px solid v.$color-tabs-active;
+                & h4:first-of-type{
+                    &.active-tab{
+                        &::after {
+                            @include menu-line;
+                            left: 0%;
+                            right: 100%;
+                            width: 100%;
+                          }
+                    }
+                    &.tab{
+                        &::after {
+                            @include menu-line;
+                            left: 100%;
+                            right: 100%;
+                            width: 0%;
+                          }
+                    }
+                }
+                & h4:last-of-type{
+                    &.active-tab{
+                        &::after {
+                            @include menu-line;
+                            left: 0%;
+                            right: 100%;
+                            width: 100%;
+                          }
+                    }
+                    &.tab{
+                        &::after {
+                            @include menu-line;
+                            left: 0%;
+                            right: 0%;
+                            width: 0%;
+                          }
+                    }
                 }
             }
             & .content{
