--- a/src/components/SingleSpellSlot/SingleSpellSlot.scss
+++ b/src/components/SingleSpellSlot/SingleSpellSlot.scss
@@ -7,6 +7,11 @@
     width: 70px;
     height: 70px;
     margin:v.$gutter/2;
+    transition: 0.1s;
+    &:hover{
+        transition: 0.1s;
+        transform: scale(1.07);
+    }
     & img{
         height: 70px;
     }
