--- a/src/components/StuffSlot/StuffSlot.scss
+++ b/src/components/StuffSlot/StuffSlot.scss
@@ -13,9 +13,14 @@
         cursor: pointer;
         border: 0;
         border-radius: v.$round;
+        transition: 0.1s;
         & img{
             width: 100%;
             padding: 2px;
+        }
+        &:hover{
+            transform: scale(1.07);
+            transition: 0.1s;
         }
     }
 }
