--- a/src/components/SpellSlot/SpellSlot.scss
+++ b/src/components/SpellSlot/SpellSlot.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 258px;
-    margin: v.$gutter/2;
+    margin: calc(v.$gutter / 2);
     border-radius: v.$round;
     align-self: center;
 }
