--- a/src/components/BuildList/BuildList.scss
+++ b/src/components/BuildList/BuildList.scss
@@ -1,34 +1,35 @@
 @use 'src/styles/vars' as v;
 
 .build {
-    &-list-container{
+  &-list-container {
     width: 90vw;
     border-radius: v.$round;
-    margin: v.$gutter*2 auto;
+    margin: v.$gutter * 2 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    }
-    &-list img, &-container{
-        cursor: pointer;
-        pointer-events: auto;
-    }
-    &-list{
-        transition: 0.2s;
-        pointer-events: none;
-        &:hover{
-            transform: scale(1.01);
-            transition: 0.2s;
-        }
-    }
-
-    &-container{
-        background-color: v.$color-background;
-        margin-top: v.$gutter*2.5;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-left: 170px;
-        border-radius: v.$round;
+  }
+  &-list img,
+  &-container {
+    cursor: pointer;
+    pointer-events: auto;
+  }
+  &-list {
+    transition: 0.2s;
+    pointer-events: none;
+    &:hover {
+      transform: scale(1.01);
+      transition: 0.2s;
     }
   }
+
+  &-container {
+    background-color: v.$color-background;
+    margin-top: v.$gutter * 2.5;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 170px;
+    border-radius: v.$round;
+  }
+}
