--- a/src/components/ElementList/ElementList.scss
+++ b/src/components/ElementList/ElementList.scss
@@ -1,31 +1,31 @@
 @use 'src/styles/vars' as v;
 
-.spell-list{
-    width: calc(100% - 258px - 3rem);
+.spell-list {
+  width: calc(100% - 258px - 3rem);
 }
 
-.list{
-    margin: v.$gutter;
-    display: flex;
-    flex-wrap: wrap;
-    overflow: overlay;
-    align-content: flex-start;
+.list {
+  margin: v.$gutter;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: overlay;
+  align-content: flex-start;
 }
 
-.cross-ring{
-    font-size: v.$font-title;
-    background-color: v.$color-cross;
-    color: white;
-    position: absolute;
-    padding: 0 4px;
-    z-index: 1;
-    right: calc(5vw - 1rem);
-    margin-top: -30px;
-    &:after{
-        display: inline-block;
-        content: "\00d7"; /* This will render the 'X' */
-    }
-    &:hover{
-        cursor: pointer;
-    }
+.cross-ring {
+  font-size: v.$font-title;
+  background-color: v.$color-cross;
+  color: white;
+  position: absolute;
+  padding: 0 4px;
+  z-index: 1;
+  right: calc(5vw - 1rem);
+  margin-top: -30px;
+  &:after {
+    display: inline-block;
+    content: '\00d7'; /* This will render the 'X' */
+  }
+  &:hover {
+    cursor: pointer;
+  }
 }
