--- a/src/components/SingleBuild/SingleBuild.scss
+++ b/src/components/SingleBuild/SingleBuild.scss
@@ -1,31 +1,31 @@
 @use 'src/styles/vars' as v;
 
-.build-stuff{
-    display: flex;
+.build-stuff {
+  display: flex;
 }
-.build-img-hero{
-    position: absolute;
-    height: 110px;
-    left: 30px;
-    top: calc(2em - 18px);
+.build-img-hero {
+  position: absolute;
+  height: 110px;
+  left: 30px;
+  top: calc(2em - 18px);
 }
-.build-list{
-    position: relative;
+.build-list {
+  position: relative;
 }
 
-.cross-close-build{
-    pointer-events: auto;
-    border: 0;
-    background-color: red;
-    border-radius: v.$round;
-    color: white;
-    position: absolute;
-    padding: 2px 6px;
-    z-index: 1;
-    right: -8px;
-    top: calc(0px + 2rem);
-    &:after {
-        display: inline-block;
-        content: "\00d7"; /* This will render the 'X' */
-      }
+.cross-close-build {
+  pointer-events: auto;
+  border: 0;
+  background-color: red;
+  border-radius: v.$round;
+  color: white;
+  position: absolute;
+  padding: 2px 6px;
+  z-index: 1;
+  right: -8px;
+  top: calc(0px + 2rem);
+  &:after {
+    display: inline-block;
+    content: '\00d7'; /* This will render the 'X' */
+  }
 }
