--- a/src/components/SingleSpell/SingleSpell.scss
+++ b/src/components/SingleSpell/SingleSpell.scss
@@ -1,105 +1,107 @@
 @use 'src/styles/vars' as v;
 
-.spell{
-    width: 50%;
-    display: flex;
-    align-items: center;
+.spell {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  padding: v.$gutter;
+  border: 2px solid v.$color-line;
+  &:hover {
+    cursor: pointer;
+    background-color: v.$color-slot;
+  }
+  &-img {
+    position: relative;
+    &_spell {
+      width: 100px;
+    }
+    &_cost,
+    &_ap,
+    &_load {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      & img {
+        position: absolute;
+      }
+    }
+    &_cost {
+      left: 5px;
+      top: 0px;
+    }
+    &_ap {
+      left: 5px;
+      & img:first-of-type {
+        width: 40px;
+      }
+    }
+    &_load {
+      right: 5px;
+      top: 0px;
+      & img:first-of-type {
+        width: 35px;
+      }
+    }
+  }
+  &-content {
     padding: v.$gutter;
-    border: 2px solid v.$color-line;
-    &:hover{
-        cursor: pointer;
-        background-color: v.$color-slot;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    & h2 {
+      font-weight: bold;
+      font-size: 1.3em;
+      padding-bottom: calc(v.$gutter / 2);
     }
-    &-img{
-        position: relative;
-        &_spell{
-            width: 100px;
-        }
-        &_cost, &_ap, &_load{
-            position: absolute;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            & img{
-                position: absolute;
-            }
-        }
-        &_cost{
-            left: 5px;
-            top: 0px;
-        }
-        &_ap{
-            left: 5px;
-            & img:first-of-type{
-                width: 40px;
-            }
-        }
-        &_load{
-            right: 5px;
-            top: 0px;
-            & img:first-of-type{
-                width: 35px;
-            }
-        }
+    & h3 {
+      z-index: 100;
+      display: inline;
+      padding-right: 10px;
+      font-weight: bold;
     }
-    &-content{
-        padding: v.$gutter;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        width: 100%;
-        & h2{
-            font-weight: bold;
-            font-size: 1.3em;
-            padding-bottom: calc(v.$gutter / 2);
-        }
-        & h3{
-            z-index: 100;
-            display: inline;
-            padding-right: 10px;
-            font-weight: bold;
-        }
-        &_description{
-            padding-bottom: calc(v.$gutter / 2);
-            height: 65px;
-            opacity: 0;
-            transition: 0.2s ease-out;
-            &.active{
-                opacity: 1;
-                transition: 0.2s ease-out;
-            }
-        }
-        &_gift-block{
-            transition: 0.3s ease-out;
-            &.active{
-                transform: translateY(-65px);
-                transition: 0.3s ease-out;
-                height: 22px; // h3 + gutter size 
-            }
-            & .arrow {
-                border: solid black;
-                border-width: 0 3px 3px 0;
-                display: inline-block;
-                padding: 3px;
-                transform: rotate(-135deg);
-                margin-left: 10px;
-                margin-bottom: -2px;
-                &.active{
-                    transform: rotate(45deg);
-                    margin-bottom: 2px;
-                }
-            }
-        }
-        &_gifts{
-            height: 0px;
-            opacity: 0;
-            transition: 0.2s ease-out;
-            padding-top: calc(v.$gutter / 2);
-            &.active{
-                height: auto;
-                opacity: 1;
-                transition: 0.2s ease-out; 
-            }
-        }
+    &_description {
+      padding-bottom: calc(v.$gutter / 2);
+      height: 65px;
+      opacity: 0;
+      transition: 0.2s ease-out;
+      &.active {
+        opacity: 1;
+        transition: 0.2s ease-out;
+      }
     }
+    &_gift-block {
+      transition: 0.3s ease-out;
+      &.active {
+        transform: translateY(-65px);
+        transition: 0.3s ease-out;
+        height: 22px; // h3 + gutter size
+      }
+      & .arrow {
+        border: solid black;
+        border-width: 0 3px 3px 0;
+        display: inline-block;
+        padding: 3px;
+        transform: rotate(-135deg);
+        margin-left: 10px;
+        margin-bottom: -2px;
+        &.active {
+          transform: rotate(45deg);
+          margin-bottom: 2px;
+        }
+      }
+    }
+    &_gifts {
+      height: 0px;
+      opacity: 0;
+      transition: 0.2s ease-out;
+      padding-top: calc(v.$gutter / 2);
+      &.active {
+        height: auto;
+        opacity: 1;
+        transition: 0.2s ease-out;
+      }
+    }
+  }
 }
