--- a/src/components/SingleSpellSlot/SingleSpellSlot.scss
+++ b/src/components/SingleSpellSlot/SingleSpellSlot.scss
@@ -1,38 +1,38 @@
-@use "src/styles/vars" as v;
+@use 'src/styles/vars' as v;
 
-.spell-slot{
-    position: relative;
-    background-color: #ffffff;
-    cursor: pointer;
-    width: 70px;
-    height: 70px;
-    margin: calc(v.$gutter / 2);
+.spell-slot {
+  position: relative;
+  background-color: #ffffff;
+  cursor: pointer;
+  width: 70px;
+  height: 70px;
+  margin: calc(v.$gutter / 2);
+  transition: 0.1s;
+  &:hover {
     transition: 0.1s;
-    &:hover{
-        transition: 0.1s;
-        transform: scale(1.07);
-    }
-    & img{
-        height: 70px;
-    }
+    transform: scale(1.07);
+  }
+  & img {
+    height: 70px;
+  }
 }
 .delete-spell {
-    font-size: 0.9em;
-    background-color: red;
-    color: white;
-    position: absolute;
-    padding: 0 4px;
-    z-index: 1;
-    width: 15px;
-    margin: 5px;
-    left: calc(100% - 15px);
-    bottom: calc(100% - 14px);
-    border: 0;
-    &:after{
-        display: inline-block;
-        content: "\00d7"; /* This will render the 'X' */
-    }
-    &:hover{
-        cursor: pointer;
-    }
+  font-size: 0.9em;
+  background-color: red;
+  color: white;
+  position: absolute;
+  padding: 0 4px;
+  z-index: 1;
+  width: 15px;
+  margin: 5px;
+  left: calc(100% - 15px);
+  bottom: calc(100% - 14px);
+  border: 0;
+  &:after {
+    display: inline-block;
+    content: '\00d7'; /* This will render the 'X' */
+  }
+  &:hover {
+    cursor: pointer;
+  }
 }
