--- a/src/components/StuffSlot/StuffSlot.scss
+++ b/src/components/StuffSlot/StuffSlot.scss
@@ -1,46 +1,48 @@
 @use 'src/styles/vars' as v;
 
-.stuff{
-    display: flex;
-    align-items: flex-end;
+.stuff {
+  display: flex;
+  align-items: flex-end;
 
-    &-ring-slot, &-cuff-slot, &-companion-slot{
-        position: relative;
-        width: 90px;
-        height: 90px;
-        background-color: v.$color-slot;
-        margin: v.$gutter;
-        cursor: pointer;
-        border: 0;
-        border-radius: v.$round;
-        transition: 0.1s;
-        & img{
-            width: 100%;
-            padding: 2px;
-        }
-        &:hover{
-            transform: scale(1.07);
-            transition: 0.1s;
-        }
-    }
-}
-.delete-item{
-    font-size: v.$font-text;
-    background-color: v.$color-cross;
-    color: white;
-    position: absolute;
-    padding: 0 4px;
-    z-index: 1;
-    width: 15px;
-    margin: 5px;
-    left: calc(100% - 10px);
-    bottom: calc(100% - 8px);
+  &-ring-slot,
+  &-cuff-slot,
+  &-companion-slot {
+    position: relative;
+    width: 90px;
+    height: 90px;
+    background-color: v.$color-slot;
+    margin: v.$gutter;
+    cursor: pointer;
     border: 0;
-    &:after{
-        display: inline-block;
-        content: "\00d7"; /* This will render the 'X' */
+    border-radius: v.$round;
+    transition: 0.1s;
+    & img {
+      width: 100%;
+      padding: 2px;
     }
-    &:hover{
-        cursor: pointer;
+    &:hover {
+      transform: scale(1.07);
+      transition: 0.1s;
     }
+  }
+}
+.delete-item {
+  font-size: v.$font-text;
+  background-color: v.$color-cross;
+  color: white;
+  position: absolute;
+  padding: 0 4px;
+  z-index: 1;
+  width: 15px;
+  margin: 5px;
+  left: calc(100% - 10px);
+  bottom: calc(100% - 8px);
+  border: 0;
+  &:after {
+    display: inline-block;
+    content: '\00d7'; /* This will render the 'X' */
+  }
+  &:hover {
+    cursor: pointer;
+  }
 }
