--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -12,6 +12,8 @@
     padding: v.$gutter;
     position: sticky;
     z-index: 1;
+    font-weight: bold;
+    letter-spacing: 1px;
   }
 
   &-container {
